[package]
name = "tcp-over-http"
version = "0.1.0"
edition = "2021"

[features]
rustc_stable = []

[profile.release]
#https://github.com/flamegraph-rs/flamegraph
#debug = true

[dependencies]
actix-web = "*"
tokio = { version = "*", features = ["net", "rt-multi-thread", "macros"] }
clap = { version = "*", features = ["derive"] }
reqwest = { version = "*", features = ["stream"] }
tokio-util = { version = "*", features = ["io", "compat"] }
futures = "*"
lazy_static = "*"
#url = "*"
anyhow = "*"
halfbrown = "*"
uuid = { version = "*", features = ["v4"] }

#log = "*"

bytes = "*"

ouroboros = "*"
#console-subscriber = "*"

stream-cancel = "*"
